--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,49 +1,59 @@
 .home {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    /* Use min-height for better flexibility */
-    color: var(--text-light);
-    padding: 1rem;
-    /* Adjust padding for all screen sizes */
+    color: var(--text-primary);
+    padding: 4rem;
     background: linear-gradient(to bottom, var(--background-gradient-start) 0%, var(--background-gradient-end) 100%);
+}
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .intro h1 {
     font-size: calc(2rem + 2vmin);
-    /* Responsive font size */
     margin-bottom: 1rem;
-    color: var(--teal-bright);
-    font-family: var(--font-secondary);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    color: var(--accent-color);
+        font-family: 'Press Start 2P', cursive;
+    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .intro p {
     font-size: calc(1rem + 1vmin);
-    /* Responsive font size */
-    max-width: 90%;
-    /* Better width on smaller screens */
+    max-width: 600px;
     text-align: center;
     margin-bottom: 2rem;
-    color: var(--background-light);
+    color: var(--text-secondary);
+    font-family: var(--font-secondary);
 }
 
-@media screen and (max-width: 768px) {
-    .home {
-        padding: 1rem;
-        /* Adjust padding for smaller screens */
-        flex-direction: column;
-        /* Stack elements on smaller screens */
-    }
-
-    .intro h1 {
-        font-size: calc(1.5rem + 2vmin);
-        /* Smaller font size on small screens */
-    }
-
-    .intro p {
-        font-size: calc(0.8rem + 1vmin);
-        /* Smaller font size on small screens */
-    }
+.call-to-action {
+    text-decoration: none;
+    background-color: var(--accent-color);
+    color: var(--text-primary);
+    padding: 0.8em 1.5em;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin: 10px;
 }
+
+.call-to-action:hover {
+    background-color: darken(var(--accent-color), 10%);
+}
+
+.headshot {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+    border: 3px solid var(--accent-color);
+    object-fit: cover;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
