--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,13 +1,9 @@
 .contact-section {
     padding: 4rem;
-    background: linear-gradient(to bottom, var(--background-gradient-end) 0%, var(--background-gradient-start) 100%);
-    min-height: 100vh;
+    background: var(--dark-to-light-gradient);
     text-align: center;
     color: var(--text-primary);
-    border-top: 5px solid var(--accent-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    border-top: var(--section-divider);
 }
 
 .contact-email {
@@ -24,11 +20,11 @@
 }
 
 .contact-section h2 {
-    font-size: calc(2rem + 1vmin);
-        margin-bottom: 1rem;
-        color: var(--accent-color);
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        font-family: 'Press Start 2P', cursive;
+    font-size: var(--section-header);
+    margin-bottom: 1rem;
+    color: var(--accent-color);
+    text-shadow: var(--section-header-shadow);
+    font-family: var(--pixel)
 }
 
 .contact-form {
@@ -37,7 +33,7 @@
 
 .contact-form input,
 .contact-form textarea {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--background-color);
     color: var(--text-primary);
     border: 1px solid var(--accent-color);
     padding: 1rem;
@@ -53,8 +49,8 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: var(--color-transition);
+    box-shadow: var(--box-shadow);
 }
 
 .contact-form button:hover {
@@ -71,5 +67,11 @@
     .contact-form button {
         width: 100%;
         padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .contact-section h2 {
+        font-size: var(--mobile-header-size)
     }
 }
