--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 :root {
   --text-primary: #ffffff;
   --text-secondary: #cccccc;
@@ -9,6 +10,21 @@
   --font-secondary: 'Roboto', sans-serif;
   --button-hover-color: #28b5b5;
   --responsive-navbar-width: 200px;
+  --header-size: calc(2rem + 2vmin);
+  ;
+  --mobile-header-size: calc(1.5rem + 1vmin);
+  --paragraph-size: calc(1rem + 1vmin);
+  --pixel: 'Press Start 2P', cursive;
+  --dark-to-light-gradient: linear-gradient(to bottom, var(--background-gradient-end) 0%, var(--background-gradient-start) 100%);
+  --light-to-dark-gradient: linear-gradient(to bottom, var(--background-gradient-start) 0%, var(--background-gradient-end) 100%);
+  --section-header: calc(2rem + 1vmin);
+  --section-header-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  --section-divider: 5px solid var(--accent-color);
+  --background-color: rgba(255, 255, 255, 0.1);
+  --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  --text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
+  --color-transition: background-color 0.3s ease;
+  --transform-transition: transform 0.3s ease-in-out;
 }
 
 body {
@@ -16,7 +32,7 @@ body {
   padding: 0;
   font-family: var(--font-primary);
   color: var(--text-primary);
-  background: linear-gradient(to bottom, var(--background-gradient-start) 0%, var(--background-gradient-end) 100%);
+  background: var(--light-to-dark-gradient);
   line-height: 1.6;
   overflow-x: hidden;
 }
@@ -71,7 +87,7 @@ p {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(255, 255, 255, 0.1);
+  background: var(--background-color);
   z-index: -1;
 }
 
@@ -83,7 +99,7 @@ a {
   border-radius: 4px;
   text-transform: uppercase;
   font-weight: bold;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: var(--color-transition), color 0.3s ease;
   text-decoration: none;
   background-color: var(--accent-color);
 }
@@ -111,6 +127,15 @@ textarea:focus {
   outline: none;
   border-color: var(--accent-color);
 }
+
+.section-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
 
 @media screen and (max-width: 768px) {
   h1 {
