--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -3,10 +3,10 @@
     height: 200px;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(to bottom, var(--background-gradient-start) 0%, var(--background-gradient-end) 100%);
+    background: var(--light-to-dark-gradient);
     border: 2px solid var(--accent-color);
     border-radius: 10px;
-    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--text-shadow);
     margin-top: 30px;
 }
 
@@ -18,23 +18,22 @@
     background-color: black;
 }
 
-#frenchie {
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    bottom: 20px;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
+#frenchie,
 #obstacle {
     width: 60px;
     height: 60px;
     position: absolute;
-    bottom: 5px;
-    right: -20px;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+#frenchie {
+    bottom: 20px;
+}
+
+#obstacle {
+    bottom: 5px;
+    right: -20px;
 }
 
 .play-button {
@@ -42,9 +41,9 @@
     color: var(--text-primary);
     padding: 0.8em 1.5em;
     border-radius: 5px;
-        font-family: 'Press Start 2P', cursive;
+    font-family: var(--pixel);
     font-size: 1rem;
-    transition: background-color 0.3s ease;
+    transition: var(--color-transition);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -72,7 +71,7 @@
     color: var(--text-primary);
     padding: 20px;
     border-radius: 10px;
-        font-family: 'Press Start 2P', cursive;
+    font-family: var(--pixel)
 }
 
 .game-over p {
