--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,12 +1,7 @@
 .home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
     color: var(--text-primary);
     padding: 4rem;
-    background: linear-gradient(to bottom, var(--background-gradient-start) 0%, var(--background-gradient-end) 100%);
+    background: var(--light-to-dark-gradient);
 }
 
 .intro {
@@ -17,15 +12,15 @@
 }
 
 .intro h1 {
-    font-size: calc(2rem + 2vmin);
+    font-size: var(--header-size);
     margin-bottom: 1rem;
     color: var(--accent-color);
-        font-family: 'Press Start 2P', cursive;
-    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
+    font-family: var(--pixel);
+    text-shadow: var(--text-shadow)
 }
 
 .intro p {
-    font-size: calc(1rem + 1vmin);
+    font-size: var(--paragraph-size);
     max-width: 600px;
     text-align: center;
     margin-bottom: 2rem;
@@ -39,7 +34,7 @@
     color: var(--text-primary);
     padding: 0.8em 1.5em;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: var(--color-transition);
     margin: 10px;
 }
 
@@ -54,6 +49,11 @@
     margin-bottom: 2rem;
     border: 3px solid var(--accent-color);
     object-fit: cover;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
 }
 
+@media screen and (max-width: 480px) {
+    .intro h1 {
+        font-size: var(--mobile-header-size)
+    }
+}
