--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,18 +1,18 @@
 .projects-section {
     padding: 4rem;
-    background: linear-gradient(to bottom, var(--background-gradient-start) 0%, var(--background-gradient-end) 100%);
+    background: var(--light-to-dark-gradient);
     min-height: 100vh;
-    border-top: 5px solid var(--accent-color);
+    border-top: var(--section-divider);
     color: var(--text-primary);
     text-align: center;
 }
 
 .projects-section h2 {
-    font-size: calc(2rem + 1vmin);
-        margin-bottom: 1rem;
-        color: var(--accent-color);
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        font-family: 'Press Start 2P', cursive;
+    font-size: var(--section-header);
+    margin-bottom: 1rem;
+    color: var(--accent-color);
+    text-shadow: var(--section-header-shadow);
+    font-family: var(--pixel);
 }
 
 .projects-grid {
@@ -23,11 +23,11 @@
 }
 
 .project-card {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--background-color);
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease-in-out;
+    transition: var(--transform-transition);
     color: var(--text-secondary);
 }
 
@@ -73,5 +73,11 @@
 
     .project-info {
         padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .projects-section h2 {
+        font-size: var(--mobile-header-size)
     }
 }
