--- a/src/styles/Skill.css
+++ b/src/styles/Skill.css
@@ -75,8 +75,8 @@
 .skill-item:hover::after {
     content: attr(data-tooltip);
     position: absolute;
-    left: 100%;
-    top: 0;
+    left: 50%;
+    bottom: 100%;
     white-space: nowrap;
     background-color: #333;
     color: #fff;
