--- a/src/styles/BlogPost.css
+++ b/src/styles/BlogPost.css
@@ -62,6 +62,70 @@
     margin-bottom: 2rem;
 }
 
+.related-posts-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 16px;
+    margin-top: 2rem;
+}
+
+.related-post-card {
+    background-color: var(--background-color);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: var(--box-shadow);
+    transition: var(--transform-transition);
+    color: var(--text-secondary);
+    padding: 1rem;
+}
+
+.related-post-thumbnail {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.related-post-title {
+    font-family: var(--pixel);
+    color: var(--accent-color);
+    font-size: 1rem;
+    line-height: 1.25em;
+}
+
+.related-post-date {
+    font-size: 0.875rem;
+    color: var(--text-secondary);
+}
+
+.related-post-description {
+    font-size: 0.875rem;
+    color: var(--text-secondary);
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.related-post-read-more {
+    padding: 0.5rem 1rem;
+    margin: 0 0.5rem;
+    background-color: var(--accent-color);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.related-post-read-more:hover {
+    background-color: #3ad2d9;
+}
+
 /* Add responsive design */
 @media screen and (max-width: 768px) {
     .blog-post-container {
