--- a/src/styles/BlogPost.css
+++ b/src/styles/BlogPost.css
@@ -1,5 +1,3 @@
-/* BlogPost.css */
-
 .blog-post-container {
     color: var(--text-primary);
     background: var(--dark-to-light-gradient);
@@ -20,27 +18,22 @@
 
 .blog-post-content {
     background-color: var(--background-color);
-    /* Semi-transparent background */
     color: var(--text-secondary);
     padding: 2rem;
     margin-bottom: 2rem;
     border-radius: 8px;
     box-shadow: var(--box-shadow);
     width: 80%;
-    /* Adjust width as needed */
     max-width: 800px;
-    /* Adjust maximum width as needed */
 }
 
 .blog-post-content p {
     color: var(--text-secondary);
-    /* font-family: var(--pixel); */
     line-height: 1.5;
     margin-bottom: 1rem;
     text-align: justify;
 }
 
-/* Style for rich text headings */
 .blog-post-content h1,
 .blog-post-content h2,
 .blog-post-content h3 {
@@ -56,7 +49,6 @@
     margin-bottom: 2rem;
 }
 
-/* Add any specific styling you need for blog post details */
 .blog-post-details {
     font-size: var(--paragraph-size);
     margin-bottom: 2rem;
@@ -123,10 +115,9 @@
 }
 
 .related-post-read-more:hover {
-    background-color: #3ad2d9;
+    background-color: var(--accent-color);
 }
 
-/* Add responsive design */
 @media screen and (max-width: 768px) {
     .blog-post-container {
         padding: 2rem;
